@@ -1,5 +1,8 @@
 Changes with Apache 1.3b7
 
+  *) Standardized the time format in mod_status to match that of other 
+     places in the code (e.g. DATE_GMT)).
+
   *) Fix handling of %Z in timefmt strings for those platforms with no time
      zone information in their tm struct. [Paul Eggert <eggert@twinsun.com>]
      PR #754
